Local LLM & VLM Setup

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
 # OpenRouter API Key (get from https://openrouter.ai/)
 OPENROUTER_API_KEY=your_api_key_here
 
-# Model Selection
-# VLM options: openai/gpt-4o, google/gemini-pro-1.5, anthropic/claude-3-opus
-VLM_MODEL=openai/gpt-4o
+# Model Selection (ordered by cost: cheapest first)
+# VLM options: 
+#   - google/gemini-flash-1.5 (cheapest, good quality)
+#   - openai/gpt-4o-mini (cheap, great quality)
+#   - openai/gpt-4o (expensive, best quality)
+#   - anthropic/claude-3-haiku (cheap)
+#   - anthropic/claude-3-sonnet (moderate)
+VLM_MODEL=openai/gpt-4o-mini
 
-# LLM options: openai/gpt-4o, anthropic/claude-3-opus, meta-llama/llama-3.1-70b-instruct
-LLM_MODEL=openai/gpt-4o
+# LLM options:
+#   - meta-llama/llama-3.1-8b-instruct (cheapest)
+#   - openai/gpt-4o-mini (cheap, great quality)
+#   - openai/gpt-4o (expensive, best quality)
+LLM_MODEL=openai/gpt-4o-mini
 
 # Evaluation settings
 DEFAULT_INFERENCE_MODE=zero_shot
